--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "^5.1.0",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
     "next": "15.2.0",
     "next-sitemap": "^4.2.3",
@@ -60,6 +61,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/escape-html": "^1.0.2",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "22.5.4",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
